--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
 /* --- Imports --- */
 
 @import url("common.css");
+@import url("typography.css");
 @import url("header.css");
 @import url("body.css");
 @import url("main.css");
 @import url("footer.css");
 @import url("hovers.css");
-
-
-
