--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
 
 @import url("common.css");
 @import url("typography.css");
-@import url("header.css");
 @import url("body.css");
+@import url("header.css");
+@import url("nav.css");
 @import url("main.css");
 @import url("footer.css");
 @import url("hovers.css");
