--- a/css/body.css
+++ b/css/body.css
@@ -27,12 +27,13 @@ nav {
     left: 0;
     bottom: 90px;
     width: 230px;
+    max-height: 100%;
 
     background-color: black;
 }
 
 main {
-    height: 100%;
+    max-height: 100%;
     margin-left: 230px;
     padding-top: 90px;
     overflow-y: auto;
