--- a/css/nav.css
+++ b/css/nav.css
@@ -3,26 +3,30 @@
 nav {
     color: #717171;
 }
-
+.radios img, .user img {
+    display: inline-block;
+    width: 30px;
+    aspect-ratio: 1;
+    vertical-align: middle;
+    margin-right: 8px;
+}
 /* Logo */
 
 .logo img {
     width: 80%;
 }
-
 .logo .hidden {
     display: none;
+    width: 30px;
 }
 
 /* Radio buttons */
 
+.radios img {
+    filter: invert(46%) sepia(0%) saturate(486%) hue-rotate(152deg) brightness(90%) contrast(69%);
+}
 .radios div {
     margin-bottom: 10px;
-}
-.radios i {
-    font-size: 1.5rem;
-    vertical-align: middle;
-    margin-right: 6px;
 }
 .radios span {
     vertical-align: middle;
@@ -44,4 +48,56 @@ nav {
 }
 .playlist li {
     margin: 10px 0;
+}
+
+/* User */
+
+nav div.flex-column > div:last-child {
+    position: absolute;
+    z-index: 10;
+    bottom: 0;
+    background-color: black;
+}
+img.dload {
+    display: inline-block;
+    width: 15px;
+    aspect-ratio: 1;
+    vertical-align: middle;
+    margin-right: 4px;
+}
+nav a {
+    color: inherit;
+    text-decoration: none;
+}
+nav hr {
+    color: #717171;
+    border: 1px 0px 0px 0px;
+    margin: 10px 0 20px;
+}
+.user img {
+    background-color: #717171;
+    border-radius: 50%;
+}
+
+/* --- Navbar Layout Mobile --- */
+
+@media screen and ( max-width: 600px ) {
+    .logo img:first-child, nav span, .playlist, nav hr {
+        display: none;
+    }
+    .logo .hidden {
+        display: block;
+    }
+    .radios img, .user img {
+        margin: 0;
+    }
+    .dload {
+        margin: 20px 7px;
+    }
+    nav .mar20 {
+        margin: 10px;
+    }
+    nav .pad20 {
+        padding: 10px;
+    }
 }
