--- a/css/body.css
+++ b/css/body.css
@@ -21,7 +21,7 @@ header {
 }
 
 nav {
-    position: fixed;
+    position: relative;
     z-index: 98;
     top: 0;
     left: 0;
@@ -33,8 +33,8 @@ nav {
 }
 
 main {
-    max-height: 100%;
-    margin-left: 230px;
+    height: 100%;
+    width: calc(100% - 230px);
     padding-top: 90px;
     overflow-y: auto;
 
@@ -42,7 +42,7 @@ main {
 }
 
 footer {
-    position: fixed;
+    position: relative;
     z-index: 99;
     bottom: 0;
     left: 0;
@@ -62,6 +62,7 @@ footer {
         width: 50px;
     }
     main {
+        width: calc(100% - 50px);
         margin-left: 50px;
     }
 }
