--- a/css/common.css
+++ b/css/common.css
@@ -25,7 +25,14 @@ button {
 .flex {
     display: flex;
 }
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
 .flex-column {
     display: flex;
     flex-direction: column;
+}
+.justify-center {
+    justify-content: center;
 }
