--- a/css/nav.css
+++ b/css/nav.css
@@ -34,6 +34,10 @@
     border-left: 2px solid black;
     height: 30px;
     padding-right: 12px;
+    transition: 0.5s;
+}
+.radios label {
+    transition: 0.5s;
 }
 .radios input:checked {
     border-left: 2px solid limegreen;
