--- a/css/footer.css
+++ b/css/footer.css
@@ -43,6 +43,9 @@ footer span {
     font-size: 16px;
     margin-right: 8px;
 }
+.left-player i {
+    color: #717171;
+}
 
 /* Middle Player */
 
@@ -65,7 +68,9 @@ footer span {
 div.middle-player > div:last-child {
     width: 80%;
 }
-
+.middle-player span {
+    color: white;
+}
 .song-duration {
     position: relative;
     width: 70%;
@@ -77,7 +82,6 @@ div.middle-player > div:last-child {
 }
 .song-atm.barra, .volume-atm.barra {
     position: absolute;
-    transition: background-color .5s;
     background-color: white;
 }
 .song-atm {
@@ -86,15 +90,28 @@ div.middle-player > div:last-child {
 .volume-atm {
     width: 40%;
 }
-.song-duration:hover .song-atm, .volume-max:hover .volume-atm {
-    background-color: limegreen;
-}
 .barra {
     height: 4px;
     border-radius: 4px;
     background-color: #717171;
 }
+.barra-circle {
+    position: absolute;
+    bottom: -4px;
+    height: 12px;
+    width: 12px;
+    background-color: white;
+    border-radius: 12px;
+    cursor: pointer;
 
+    opacity: 0;
+}
+.song-duration .barra-circle {
+    left: calc( 25% - 6px );
+}
+.volume-max .barra-circle {
+    left: calc( 40% - 6px );
+}
 /* --- Footer Layout Tablet --- */
 
 @media screen and ( max-width : 700px ) {
