--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,24 @@ main img {
 .img-text {
     margin-top: 10px;
 }
+
+/* Hover Items */
+
+.img-container {
+    position: relative;
+}
+.img-container button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    color: white;
+    border: none;
+    font-size: 60px;
+
+    opacity: 0;
+}
 /* Popular */
 
 #popular .col img {
